<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">b2w</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Save</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_dictionary">Dictionary</string>
    <string name="action_translate">Translate</string>
    <string name="action_split">prepare</string>
    <string name="action_read">read</string>
    <string name="dialog_dictionaries_message">Выберите словарь который можно использовать для распознавания слов в книге</string>
    <string name="unknown">Unknown</string>
    <string name="action_add_book">Add book</string>
    <string name="action_import_dictionaries">Import dictionaries</string>
    <string name="action_export_dictionaries">Export dictionaries</string>
    <string name="button_save">Save</string>
    <string name="use">Use</string>
    <string name="skip">Skip</string>
    <string name="login_hint">Input login</string>
    <string name="password_hint">Input password</string>
    <string name="login">Login</string>
    <string name="select">Select</string>
    <string name="pars_in_parts">Paragraphs in partition</string>
    <string name="back">Up</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="default_dictionary">Default</string>
    <string name="action_menu">Menu</string>
    <string name="i_know">I know this word</string>
    <string name="library">LIBRARY</string>
    <string name="settings">KNOWN WORDS</string>
</resources>
