<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <TextView
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    <ImageView
            android:id="@android:id/icon1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="@dimen/activity_vertical_margin">
        <Button
                android:id="@+id/text_split"
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_split"/>

        <Button
                android:id="@+id/text_translate"
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_translate"/>
        <Button
                android:id="@+id/text_dictionary"
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_dictionary"/>
    </LinearLayout>


</LinearLayout>
